@@ -1,3 +1,7 @@
+Thu Apr  8 21:50:12 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)
+
+	* gnome-score.c (gnome_score_get_notable): Open files in text mode.
+
 1999-04-05 Owen Taylor  <otaylor@redhat.com>
 
 	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): Always
